@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-TreePP
-version:      0.15
+version:      0.16
 version_from: lib/XML/TreePP.pm
 installdirs:  site
 requires:
